# bazel-monorepo-example

./: BUILD.bazel  MODULE.bazel  Makefile  WORKSPACE  deps.bzl  docker-compose.yml  go.mod
api/nats/: BUILD.bazel  nats.proto
api/services/minus/v1/: BUILD.bazel  empty.go  minus_service.proto
api/services/multiply/v1/: BUILD.bazel  empty.go  multiply_service.proto
api/services/sum/v1/: BUILD.bazel  empty.go  sum_service.proto
pkg/minus/: BUILD.bazel  main.go
pkg/multiply/: BUILD.bazel  main.go
pkg/protoc-gen-nats/: BUILD.bazel  main.go
pkg/protoc-gen-nats/internal/: BUILD.bazel  generate.go
pkg/sum/: BUILD.bazel  main.go
