load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_multirun//:defs.bzl", "command", "multirun")

# gazelle:prefix github.com/mrdan4es/bazel-monorepo-example
# gazelle:go_proto_compilers @io_bazel_rules_go//proto:go_proto
# gazelle:go_grpc_compilers @io_bazel_rules_go//proto:go_grpc
# gazelle:exclude empty.go
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependensies",
        "-prune",
    ],
    command = "update-repos",
)

load("//build:container.bzl", "container_bundle")

container_bundle(
    name = "bundle",
    images = {
        "github.com/mrdan4es/bazel-monorepo-example/sum:latest": "//pkg/sum",
        "github.com/mrdan4es/bazel-monorepo-example/minus:latest": "//pkg/minus",
        "github.com/mrdan4es/bazel-monorepo-example/multiply:latest": "//pkg/multiply",
    },
    registry = "local",
)
