load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//build:container.bzl", "go_image")

go_library(
    name = "minus_lib",
    srcs = ["main.go"],
    importpath = "github.com/mrdan4es/bazel-monorepo-example/pkg/minus",
    visibility = ["//visibility:private"],
    deps = [
        "//api/services/minus/v1:minus",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "minus",
    embed = [":minus_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    embed = [":minus"],
    entrypoint = "/minus",
    visibility = ["//visibility:public"],
)
