load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//build:defs.bzl", "go_image")

go_library(
    name = "multiply_lib",
    srcs = ["main.go"],
    importpath = "github.com/mrdan4es/bazel-monorepo-example/pkg/multiply",
    visibility = ["//visibility:private"],
    deps = [
        "//api/services/multiply/v1:multiply",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "multiply",
    embed = [":multiply_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    embed = [":multiply"],
    entrypoint = "/multiply",
    visibility = ["//visibility:public"],
)
