load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "minuspb_proto",
    srcs = ["minus_service.proto"],
    visibility = ["//visibility:public"],
    deps = ["//api/nats:natspb_proto"],
)

go_proto_library(
    name = "minuspb_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
        "//pkg/protoc-gen-nats:go_proto",
    ],
    importpath = "github.com/mrdan4es/bazel-monorepo-example/api/services/minus/v1",
    proto = ":minuspb_proto",
    visibility = ["//visibility:public"],
    deps = ["//api/nats"],
)

go_library(
    name = "minus",
    srcs = ["empty.go"],
    embed = [":minuspb_go_proto"],
    importpath = "github.com/mrdan4es/bazel-monorepo-example/api/services/minus/v1",
    visibility = ["//visibility:public"],
)
