load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "multiplypb_proto",
    srcs = ["multiply_service.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "multiplypb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/mrdan4es/bazel-monorepo-example/api/services/multiply/v1",
    proto = ":multiplypb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "multiply",
    srcs = ["empty.go"],
    embed = [":multiplypb_go_proto"],
    importpath = "github.com/mrdan4es/bazel-monorepo-example/api/services/multiply/v1",
    visibility = ["//visibility:public"],
)
