load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "sumpb_proto",
    srcs = ["sum_service.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "sumpb_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
    ],
    importpath = "github.com/mrdan4es/bazel-monorepo-example/api/services/sum/v1",
    proto = ":sumpb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "sum",
    srcs = ["empty.go"],
    embed = [":sumpb_go_proto"],
    importpath = "github.com/mrdan4es/bazel-monorepo-example/api/services/sum/v1",
    visibility = ["//visibility:public"],
)
